--- a/blocks/page.css
+++ b/blocks/page.css
@@ -2,3 +2,8 @@
   background-color: #fcf5e5;
   font-family: "Poppins", sans-serif;
 }
+
+.page__section-container {
+  max-width: 1280px;
+  margin: 0 auto;
+}
