--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -17,6 +17,7 @@
   gap: 8px;
   color: #fcf5e5;
   transition: 200ms;
+  cursor: pointer;
 }
 
 .profile__add-btn:hover {
@@ -34,7 +35,6 @@
   margin: 0 0 12px 0;
   font-size: 32px;
   font-weight: 500;
-  font-style: medium;
   line-height: 1;
   color: #212121;
   display: -webkit-box;
@@ -48,7 +48,6 @@
 .profile__description {
   margin: 0;
   font-weight: 500;
-  font-style: Medium;
   font-size: 16px;
   line-height: 1;
   color: rgba(33, 33, 33, 0.7);
@@ -63,16 +62,16 @@
 .profile__edit-btn {
   margin-top: auto;
   font-weight: 500;
-  font-style: Medium;
   font-size: 16px;
-  color: rgba(33, 33, 33);
+  color: rgba(33, 33, 33, 1);
   display: flex;
   gap: 8px;
   background: none;
   border: none;
   text-decoration: none;
   transition: 200ms;
-  opacity: 0.4;
+  opacity: 0.7;
+  cursor: pointer;
 }
 
 .profile__edit-btn:hover {
