--- a/blocks/card.css
+++ b/blocks/card.css
@@ -22,6 +22,8 @@
   display: -webkit-box;
   -webkit-box-orient: vertical;
   -webkit-line-clamp: 3;
+  white-space: nowrap;
+  text-overflow: ellipsis;
   width: 100%;
 }
 
@@ -32,7 +34,6 @@
   background: transparent;
   cursor: pointer;
   min-width: 40px;
-  min-height: 40px;
   display: flex;
   align-items: flex-start;
 }
@@ -52,10 +53,5 @@
     -webkit-box-orient: vertical;
     -webkit-line-clamp: 3;
     width: 100%;
-  }
-
-  .card__like-btn {
-    min-width: 44px;
-    min-height: 44px;
   }
 }
