--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -42,6 +42,7 @@
   text-overflow: ellipsis;
   -webkit-line-clamp: 3;
   -webkit-box-orient: vertical;
+  white-space: nowrap;
   max-width: 420px;
 }
 
@@ -54,6 +55,7 @@
   display: -webkit-box;
   overflow: hidden;
   text-overflow: ellipsis;
+  white-space: nowrap;
   -webkit-line-clamp: 3;
   -webkit-box-orient: vertical;
   max-width: 420px;
@@ -72,6 +74,7 @@
   transition: 200ms;
   opacity: 0.7;
   cursor: pointer;
+  padding: 0;
 }
 
 .profile__edit-btn:hover {
@@ -91,7 +94,6 @@
 @media screen and (max-width: 627px) {
   .profile {
     flex-direction: column;
-    width: 80%;
     align-items: center;
     text-align: center;
     padding-top: 20px;
